# easy-rfdetr

./: .gitignore  LICENSE  README.md  pyproject.toml
easy_rfdetr/: __init__.py  cli.py  core.py  results.py  utils.py  visualizer.py
tests/: test_core.py  test_results.py  test_train.py  test_utils.py  test_visualizer.py
